--- a/DatingApp.csproj
+++ b/DatingApp.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
+    <Folder Include="Extensions\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
