--- a/client/angular.json
+++ b/client/angular.json
@@ -30,7 +30,10 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/font-awesome/css/font-awesome.min.css",
+              "./node_modules/bootswatch/dist/united/bootstrap.css",
+              "./node_modules/ngx-toastr/toastr.css",
               "src/styles.less"
             ],
             "scripts": []
@@ -94,8 +97,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less",
-              "node_modules/ngx-toastr/toastr.css"
+              "src/styles.less"
+             
             ],
             "scripts": []
           }
