--- a/DatingApp.csproj
+++ b/DatingApp.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.24" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
@@ -22,6 +23,7 @@
     <Folder Include="Interfaces\" />
     <Folder Include="Errors\" />
     <Folder Include="Middleware\" />
+    <Folder Include="NewFolder\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
