--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dl1nxn3dg",
+    "ApiKeys": "792697959511237",
+    "ApiSecret":"eNYeY_7s2XJlpET81ZRoxKuCnow"
+  }
 }
