--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "CloudinarySettings": {
     "CloudName": "dl1nxn3dg",
-    "ApiKeys": "792697959511237",
-    "ApiSecret":"eNYeY_7s2XJlpET81ZRoxKuCnow"
+    "ApiKey": "792697959511237",
+    "ApiSecret": "eNYeY_7s2XJlpET81ZRoxKuCnow"
   }
 }
