--- a/client/angular.json
+++ b/client/angular.json
@@ -74,16 +74,11 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
-            "production": {
-              "browserTarget": "client:build:production"
-            },
-            "development": {
-              "browserTarget": "client:build:development"
-            }
-          },
-          "defaultConfiguration": "development"
+          "options": {
+            "ssl": true,
+            "sslCert": "C:/Users/Admin/source/repos/DatingApp/DatingApp/ssl/localhost.pem",
+            "sslKey": "C:/Users/Admin/source/repos/DatingApp/DatingApp/ssl/localhost-key.pem"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
